<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="monex_name">Monex</string>

  <string name="monex_body_unexpected_eof">\n\n--- Unexpected end of content ---</string>
  <string name="monex_body_content_truncated">\n\n--- Content truncated ---</string>

  <string name="monex_notification_title">Recording HTTP activity</string>
  <string name="monex_detail_title_url">URL</string>
  <string name="monex_detail_title_method">Method</string>
  <string name="monex_detail_title_protocol">Protocol</string>
  <string name="monex_detail_title_response">Response</string>
  <string name="monex_detail_title_ssl">SSL</string>
  <string name="monex_detail_title_request_time">Request Time</string>
  <string name="monex_detail_title_response_time">Response Time</string>
  <string name="monex_detail_title_duration">Duration</string>
  <string name="monex_detail_title_request_size">Request Size</string>
  <string name="monex_detail_title_response_size">Response Size</string>
  <string name="monex_detail_title_total_size">Total Size</string>

  <string name="monex_yes">YES</string>
  <string name="monex_no">NO</string>
  <string name="monex_request">Request</string>
  <string name="monex_curl">cURL</string>
  <string name="monex_response">Response</string>
  <string name="monex_error">Error</string>
  <string name="monex_omitted_body">Encoded or Binary body omitted)</string>

  <string name="monex_delete">Delete</string>

  <string name="monex_share_text">Share As Text</string>
  <string name="monex_share_curl">Share cURL command</string>
  <string name="monex_share_file">Share File</string>
  <string name="monex_share_gitlab">Share as Gitlab snippet</string>
  <string name="monex_pass_gitlab_access_token">Please pass gitlab access token to interceptor</string>

  <string name="monex_fail_create_snippet">Fail to create snippet</string>


</resources>